--- a/about/style.css
+++ b/about/style.css
@@ -7,7 +7,7 @@ img {
   margin-right: auto;
   border-radius: 50%;
   display: block;
-  border: 2px solid black;
+  border: 2px solid var(--color-text-primary);
 }
 
 section {
