--- a/style.css
+++ b/style.css
@@ -9,16 +9,26 @@
 }
 
 :root {
-  --color-bg: gainsboro;
-  --color-bg-hover: #f5f5f5;
-  --ease-soft: cubic-bezier(0.35, 0.5, 0, 1);
+  --color-text-primary: #344e41;
+  --color-text-secondary: #3a5a40;
+  --color-link: #588157;
+  --color-link-decoration: #a3b18a;
+  --color-link-hover: #344e41;
+  --color-bg: #dad7cd;
+  --color-bg-light: #f5f5f5;
+  --color-bg-dark: #696969;
+
   --font-title: "ONAMURA-UltraBold", serif;
-  font-family: Covik, ui-monospace, SFMono-Regular, "Ubuntu Mono", monospace;
+  --font-body: Covik, ui-monospace, SFMono-Regular, "Ubuntu Mono", monospace;
+  --ease-soft: cubic-bezier(0.35, 0.5, 0, 1);
+
+  font-family: var(--font-body);
   background-color: var(--color-bg);
+  color: var(--color-text-primary);
 }
 
 .hover-bg:hover {
-  background-color: var(--color-bg-hover);
+  background-color: var(--color-bg-light);
   transition: background-color 0.5s var(--ease-soft);
 }
 
@@ -33,9 +43,19 @@ body {
   box-sizing: border-box;
 }
 
-.main-nav {
-  list-style-type: none;
-  padding: 0px;
+a {
+  color: var(--color-link);
+  text-decoration-color: var(--color-link-decoration);
+  text-decoration-thickness: 0.1em;
+  text-underline-offset: 0.25em;
+}
+
+a:hover {
+  color: var(--color-link-hover);
+  text-decoration-color: var(--color-link-hover);
+  transition:
+    color 0.5s var(--ease-soft),
+    text-decoration-color 0.5s var(--ease-soft);
 }
 
 nav {
@@ -45,23 +65,17 @@ nav {
   margin-top: 0.5rem;
 }
 
-a {
-  color: black;
-  text-decoration: none;
-}
-
 nav a {
   font-size: 3rem;
+  text-decoration: none;
 }
 
 .font-bold {
   font-weight: bold;
 }
-
 .font-title {
   font-family: var(--font-title);
 }
-
 .text-xs {
   font-size: 0.75rem; /* 12px */
   line-height: 1rem; /* 16px */
@@ -83,24 +97,8 @@ nav a {
   line-height: 1.75rem; /* 28px */
 }
 
-.mb-1 {
-  margin-bottom: 0.25rem;
-}
-
 .mb-2 {
   margin-bottom: 0.5rem;
-}
-
-.mb-3 {
-  margin-bottom: 0.75rem;
-}
-
-.mb-4 {
-  margin-bottom: 1rem;
-}
-
-.mb-6 {
-  margin-bottom: 1.5rem;
 }
 
 .mr-1 {
@@ -111,6 +109,10 @@ nav a {
   margin-left: 0.25rem;
 }
 
+.no-underline {
+  text-decoration: none;
+}
+
 .link {
   position: relative;
 }
@@ -118,25 +120,23 @@ nav a {
 .link:after {
   content: "";
   position: absolute;
-  width: 0;
+  width: 0%;
   height: 2px;
   bottom: -1px;
   right: auto;
   left: 0;
   background-color: currentColor;
-  visibility: hidden;
+  /* visibility: hidden; */
   transition: all 0.3s var(--ease-soft);
 }
-
+/* 
 .group:hover .link:after,
-.link:hover:after,
-.link[data-active="true"]:after,
-.link[data-selected="true"]:after {
+.link:hover:after {
   visibility: visible;
-  width: 100%;
+  width: 105%;
   left: 0;
   right: auto;
-}
+} */
 
 .back-button {
   display: inline;
@@ -158,16 +158,18 @@ nav a {
   transition: border-color 0.5s var(--ease-soft);
 }
 
+.breadcrumbs {
+  display: flex;
+  align-items: center;
+  margin-bottom: 1rem;
+  gap: 0.5rem;
+}
+
+.breadcrumbs span {
+  color: var(--color-text-primary);
+}
+
 article img {
   width: 100%;
   border-radius: 0.5rem;
-}
-
-article a {
-  color: blue;
-}
-
-article a:hover {
-  color: darkblue;
-  transition: color 0.3s var(--ease-soft);
 }
